--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
 
+# Mnesias
+/Mnesia.*
+
+
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
 
